sandc/test/fixtures/astRegression/shouldSucceed/productions/classItem/ClassStaticPropertyDeclaration.sand
pub class ClassStaticPropertyDeclaration {
    static foo: int = 0;
    static foo = "hi";

    static var foo = "blah";
    static shadow foo = "blah";

    pub static foo = "blah";
    pub static var foo = "blah";
    pub static shadow foo = "blah";

    (pub get prot set) static foo = "blah";
    (pub get) prot static foo = "blah";
    (priv get priv set) static foo = "blah";

    static foo = if cond {
        x();
        x
    } else {
        x
    };

    (pub get customGetterName pub set customSetterName) static foo = "blah";
    (pub get customGetterName pub set customSetterName) static foo: Foo = "blah";
}