sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/IfStatementInPlaceOfIfPseudex.sand
pub class IfStatementInPlaceOfIfPseudex {
    foo() {
        let a = if cond {
            foo();
        } else {
            foo();
        };
    }
}